recursion.lessons.recursion.tree.Tree.scala.error
Tree:7: error: type mismatch;
 found   : Boolean
 required: Double
recule(steps==1)
            ^